cleaned up dependecies